--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
         <div class="section_pic-container">
-            <img src="./assets/img-01.png" alt="laughing yash by bilal"/> 
+            <img src="./assets/yash-0x.jpeg" alt="laughing yash by bilal"/> 
         </div>
         <div class="section_text">
         <p class="section_text_p1">Hello I'm,</p>
@@ -281,6 +281,5 @@
 </footer>
     <script src="script.js"></script>
 </body>
-
 
 </html>
